examples/ingress-resources/proxy-redirect/ingress-no-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: redirect-backend-svc
            port:
              number: 80
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: redirect-backend-svc
            port:
              number: 80
